--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="password_hint">Пароль</string>
     <string name="login_enter">Войти</string>
     <string name="login_register">Зарегистрироваться</string>
+    <string name="login_input_error">Ошибка ввода данных</string>
 </resources>
